--- a/src/ui/DetailsPanel.ui
+++ b/src/ui/DetailsPanel.ui
@@ -161,6 +161,7 @@
                           </child> -->
                         </object>
                       </child>
+                      <!--
                       <child>
                         <object class="AdwExpanderRow">
                           <property name="title" translatable="true">Tags</property>
@@ -207,9 +208,10 @@
                             </object>
                           </child>
                         </object>
-                      </child>
+                      </child> -->
                     </object>
                   </child>
+
 
                   <child>
                     <object class="GtkListBox">
@@ -222,18 +224,19 @@
                         <object class="AdwActionRow">
                           <property name="title" translatable="yes">Style</property>
                           <property name="subtitle" bind-source="IcoDetailsPanel" bind-property="iconStyle" bind-flags="sync-create"/>
+                          <!--
                           <child type="suffix">
                             <object class="GtkMenuButton">
                               <property name="valign">3</property>
                               <property name="icon-name">document-edit-symbolic</property>
                               <property name="tooltip-text" translatable="true">Edit style</property>
                               <property name="popover">details_style_popover</property>
-                              <!-- <property name="direction">2</property> -->
                               <style>
                                 <class name="flat"/>
                               </style>
                             </object>
                           </child>
+                          -->
                           <style>
                             <class name="property"/>
                           </style>
