--- a/src/ui/AddSetDialog.ui
+++ b/src/ui/AddSetDialog.ui
@@ -55,8 +55,9 @@
                           <child>
                             <object class="GtkImage">
                               <property name="icon-name">folder-symbolic</property>
+                              <property name="icon-size">large</property>
                               <style>
-                                <class name="mb-2"/>
+                                <class name="mb-4"/>
                               </style>
                             </object>
                           </child>
@@ -77,7 +78,7 @@
                               <property name="wrap">true</property>
                               <property name="justify">center</property>
                               <style>
-                                <class name="mb-6"/>
+                                <class name="mb-8"/>
                               </style>
                             </object>
                           </child>
@@ -109,14 +110,17 @@
                               <property name="halign">3</property>
                               <property name="hexpand">true</property>
                               <property name="spinning">true</property>
+                              <property name="width-request">30</property>
+                              <property name="height-request">30</property>
                             </object>
                           </child>
                           <child>
                             <object class="GtkLabel">
-                              <property name="label" translatable="true">Processing...</property>
+                              <property name="label" translatable="true">Looking for icons</property>
                               <property name="halign">3</property>
                               <style>
-                                <class name="my-4"/>
+                                <class name="mt-2"/>
+                                <class name="mb-4"/>
                                 <class name="title-3"/>
                               </style>
                             </object>
