--- a/src/ui/Window.ui
+++ b/src/ui/Window.ui
@@ -97,7 +97,7 @@
                         <property name="maximum-size">350</property>
                         <property name="tightening-threshold">200</property>
                         <child>
-                          <object class="GtkBox">
+                          <object class="GtkBox" id="search_controls_wrapper">
                             <property name="spacing">4</property>
                             <child>
                               <object class="GtkSearchEntry" id="search_entry">
@@ -130,6 +130,23 @@
                         <property name="popover">icon_filters_popover</property>
                       </object>
                     </child> -->
+
+                    <child type="end">
+                      <object class="GtkButton" id="import_button">
+                        <property name="halign">2</property>
+                        <property name="valign">1</property>
+                        <property name="action-name">win.add_set</property>
+                        <style>
+                          <class name="suggested-action" />
+                        </style>
+                        <child>
+                          <object class="AdwButtonContent">
+                            <property name="label" translatable="true">Import icons</property>
+                            <property name="icon-name">list-add</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
 
                     <child type="end">
                       <object class="GtkToggleButton" id="show_details_sidebar_button">
