--- a/src/ui/AddSetDialog.ui
+++ b/src/ui/AddSetDialog.ui
@@ -175,6 +175,17 @@
                               </style>
                             </object>
                           </child>
+                          <child>
+                            <object class="GtkProgressBar" id="progress_bar">
+                              <property name="visible">false</property>
+                              <property name="fraction">0</property>
+                              <property name="halign">center</property>
+                              <style>
+                                <class name="mt-16" />
+                                <class name="mb-6" />
+                              </style>
+                            </object>
+                          </child>
                         </object>
                       </property>
                     </object>
